validation empty inputs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="minus">-</string>
     <string name="multiply">*</string>
     <string name="divide">/</string>
+    <string name="answer">Answer : </string>
 </resources>
